--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>JANIN A APURBA</h1>
-      <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer, Programmer"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Data Scientist, Researcher, Software Engineer/Developer, AI/ML Engineer, Competitive Programmer"></span></p>
     </div>
   </section><!-- End Hero -->
 
