--- a/index.html
+++ b/index.html
@@ -80,7 +80,10 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>I'm a professional Programmer,Software engineer and Freelancer.Here is my Summery of myself</p>
+          <p>I'm a Data Scientist, Researcher, Software Engineer/Developer, AI/ML Engineer, Competitive Programmer.Highly motivated Computer Science & Engineering student with 10 years of experience in competitive programming. Seeking opportunities to apply my knowledge of Data science, Algorithms, AI, Deep learning, and Machine learning to real-world challenges.
+Problem-solving career link: https://www.stopstalk.com/user/profile/studywithjaninYT
+
+</p>
         </div>
 
         <div class="row">
