--- a/index.html
+++ b/index.html
@@ -80,8 +80,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>I'm a Data Scientist, Researcher, Software Engineer/Developer, AI/ML Engineer, Competitive Programmer.Highly motivated Computer Science & Engineering student with 10 years of experience in competitive programming. Seeking opportunities to apply my knowledge of Data science, Algorithms, AI, Deep learning, and Machine learning to real-world challenges.
-Problem-solving career link: https://www.stopstalk.com/user/profile/studywithjaninYT
+          <p>I'm a Data Scientist, Researcher, Software Engineer/Developer, AI/ML Engineer, Competitive Programmer.Seeking opportunities to apply my knowledge of Data Science, Research, AI, Deep learning, and Machine learning to real-world challenges.Earned 30+ Certifications from institutions like Stanford online, University of Michigan, Harvard University, eDX, Coursera and 365 Data Science, covering core AI/ML topics and Various. Recent certifications reflect up-to-date industry knowledge. Attended workshops on TensorFlow, Azure, and Computer vision, showcasing proactive engagement with emerging tools and frameworks.
 
 </p>
         </div>
@@ -91,14 +90,14 @@ Problem-solving career link: https://www.stopstalk.com/user/profile/studywithjan
             <img src="img1.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>UI/UX Designer &amp; Web Developer.</h3>
+            <h3>I'm a Data Scientist, Researcher, Software Engineer/Developer, AI/ML Engineer, Competitive Programmer</h3>
             <p class="fst-italic">
-              Self-starter and passionate Computer Science &  Engineering student with experience in competitive worlds outside the courses and ability to learn. Aspiring to apply my knowledge gained from both coursework and personal projects to real-world challenges by completing a challenging technical project 
+              Highly motivated Computer Science & Engineering student with 10 years of experience in competitive programming.Problem-solving career link: https://www.stopstalk.com/user/profile/studywithjaninYT
             </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>17 october 1995</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>17 october 1997</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://github.com/Apurba94</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+8801938328401</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Dhaka,Bangladesh</span></li>
@@ -106,15 +105,15 @@ Problem-solving career link: https://www.stopstalk.com/user/profile/studywithjan
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>28</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>BSC in CSE</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>160104026@aust.edu</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong> ----:</strong> <span> ----  </span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>BSc in Computer Science & Engineering</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Emailone:</strong> <span>japurba97@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>-----:</strong> <span>----------</span></li>
                 </ul>
               </div>
             </div>
             <p>
-               I'm a Self-starter and passionate 4th year Computer Science &  Engineering student with experience in competitive programming outside the courses and ability to learn coding languages as need. Aspiring to apply my knowledge gained from both coursework and personal projects to real-world challenges by completing a challenging technical project 
+----------------
             </p>
           </div>
         </div>
@@ -127,7 +126,7 @@ Problem-solving career link: https://www.stopstalk.com/user/profile/studywithjan
       <div class="container">
 
         <div class="section-title">
-          <h2>Facts</h2>
+          <h2>Certifications</h2>
           <p>Also Private Tutor at -Physics, math, programming and Finalist of national physics Olympiad contestant and Math Olympiad contestant
 </p>
         </div>
