--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
         <ul>
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
+          <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>CV/Resume</span></a></li>
+          <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Research & Certifications</span></a></li>
           <li><a href="#skills" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Skills</span></a></li>
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
@@ -90,7 +90,7 @@
             <img src="img1.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>I'm a Data Scientist, Researcher, Software Engineer/Developer, AI/ML Engineer, Competitive Programmer</h3>
+            <h3>Data Scientist, Researcher, Software Engineer/Developer, AI/ML Engineer, Competitive Programmer</h3>
             <p class="fst-italic">
               Highly motivated Computer Science & Engineering student with 10 years of experience in competitive programming.Problem-solving career link: https://www.stopstalk.com/user/profile/studywithjaninYT
             </p>
@@ -105,10 +105,10 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong> ----:</strong> <span> ----  </span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong> CGPA:</strong> <span> 2.325 </span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>BSc in Computer Science & Engineering</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Emailone:</strong> <span>japurba97@gmail.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>-----:</strong> <span>----------</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Certificates:</strong> <span>Earned 40+ Certificates From renowned University</span></li>
                 </ul>
               </div>
             </div>
