--- a/index.html
+++ b/index.html
@@ -126,8 +126,28 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Certifications</h2>
-          <p>Also Private Tutor at -Physics, math, programming and Finalist of national physics Olympiad contestant and Math Olympiad contestant
+          <h2>References</h2>
+          <p>
+Dr. Taslim Taher
+Assistant Professor, CSE, AUST
+Phone: +880166620796
+Email: taslim.cse@aust.edu
+
+
+• Dr. Md. Shahriar Mahbub
+Professor, CSE, AUST
+Phone: +8801748567161
+Email: shahriar.cse@aust.edu
+
+• Mr. Md. Reasad Zaman Chowdhury
+Lecturer Grade-I, CSE, AUST
+Phone: +8801744944524
+Email: reasad.cse@aust.edu
+
+• Ms.Tanjila Broti
+Lecturer Grade-I, CSE, AUST
+Phone: +8801747053002
+Email: broti.cse@aust.edu
 </p>
         </div>
 
