--- a/index.html
+++ b/index.html
@@ -128,23 +128,23 @@
         <div class="section-title">
           <h2>References</h2>
           <p>
-Dr. Taslim Taher
+1• Dr. Taslim Taher
 Assistant Professor, CSE, AUST
 Phone: +880166620796
 Email: taslim.cse@aust.edu
 
-
-• Dr. Md. Shahriar Mahbub
+2•  Dr. Md. Shahriar Mahbub
 Professor, CSE, AUST
 Phone: +8801748567161
-Email: shahriar.cse@aust.edu
+Email: shahriar.cse@aust.edu 
 
-• Mr. Md. Reasad Zaman Chowdhury
+
+3• Mr. Md. Reasad Zaman Chowdhury
 Lecturer Grade-I, CSE, AUST
 Phone: +8801744944524
-Email: reasad.cse@aust.edu
+Email: reasad.cse@aust.edu  
 
-• Ms.Tanjila Broti
+4• Ms.Tanjila Broti
 Lecturer Grade-I, CSE, AUST
 Phone: +8801747053002
 Email: broti.cse@aust.edu
@@ -156,8 +156,9 @@ Email: broti.cse@aust.edu
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
             <div class="count-box">
               <i class="bi bi-emoji-smile"></i>
-              <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Happy Clients</strong> consequuntur quae</p>
+              <span data-purecounter-start="0" data-purecounter-end="Mr. Md. Reasad Zaman Chowdhury" data-purecounter-duration="1" class="purecounter"></span>
+              <p><strong>Lecturer Grade-I,CSE,AUST</strong>Phone:+8801744944524
+Email: reasad.cse@aust.edu</p>
             </div>
           </div>
 
