--- a/index.html
+++ b/index.html
@@ -121,76 +121,92 @@
       </div>
     </section><!-- End About Section -->
 
-    <!-- ======= Facts Section ======= -->
-    <section id="facts" class="facts">
-      <div class="container">
+    <!-- ======= References Section ======= -->
+<section id="facts" class="facts">
+  <div class="container">
+    <div class="section-title">
+      <h2>References</h2>
+    </div>
 
-        <div class="section-title">
-          <h2>References</h2>
+    <div class="row no-gutters">
+
+      <!-- Dr. Taslim Taher -->
+      <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
+        <div class="count-box teacher-box">
+          <i class="bi bi-person-badge"></i>
+          <span>Dr. Taslim Taher</span>
           <p>
-1• Dr. Taslim Taher
-Assistant Professor, CSE, AUST
-Phone: +880166620796
-Email: taslim.cse@aust.edu
-
-2•  Dr. Md. Shahriar Mahbub
-Professor, CSE, AUST
-Phone: +8801748567161
-Email: shahriar.cse@aust.edu 
-
-
-3• Mr. Md. Reasad Zaman Chowdhury
-Lecturer Grade-I, CSE, AUST
-Phone: +8801744944524
-Email: reasad.cse@aust.edu  
-
-4• Ms.Tanjila Broti
-Lecturer Grade-I, CSE, AUST
-Phone: +8801747053002
-Email: broti.cse@aust.edu
-</p>
+            <strong>Assistant Professor, CSE, AUST</strong><br>
+            Phone: +880166620796<br>
+            Email: taslim.cse@aust.edu
+          </p>
         </div>
-
-        <div class="row no-gutters">
-
-          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
-            <div class="count-box">
-              <i class="bi bi-people"></i>
-              <span data-purecounter-start="0" data-purecounter-end="Reasad Zaman Chowdhury" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Lecturer Grade-I,CSE,AUST</strong>+8801744944524
-Email: reasad.cse@aust.edu</p>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
-            <div class="count-box">
-              <i class="bi bi-people"></i>
-              <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Projects</strong> adipisci atque cum quia aut</p>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
-            <div class="count-box">
-              <i class="bi bi-people"></i>
-              <span data-purecounter-start="0" data-purecounter-end="1453" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Hours Of Support</strong> aut commodi quaerat</p>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="300">
-            <div class="count-box">
-              <i class="bi bi-people"></i>
-              <span data-purecounter-start="0" data-purecounter-end="32" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Hard Workers</strong> rerum asperiores dolor</p>
-            </div>
-          </div>
-
-        </div>
-
       </div>
-    </section><!-- End Facts Section -->
 
+      <!-- Dr. Md. Shahriar Mahbub -->
+      <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
+        <div class="count-box teacher-box">
+          <i class="bi bi-person-badge"></i>
+          <span>Dr. Md. Shahriar Mahbub</span>
+          <p>
+            <strong>Professor, CSE, AUST</strong><br>
+            Phone: +8801748567161<br>
+            Email: shahriar.cse@aust.edu
+          </p>
+        </div>
+      </div>
+
+      <!-- Mr. Md. Reasad Zaman Chowdhury -->
+      <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
+        <div class="count-box teacher-box">
+          <i class="bi bi-person-badge"></i>
+          <span>Mr. Md. Reasad Zaman Chowdhury</span>
+          <p>
+            <strong>Lecturer Grade-I, CSE, AUST</strong><br>
+            Phone: +8801744944524<br>
+            Email: reasad.cse@aust.edu
+          </p>
+        </div>
+      </div>
+
+      <!-- Ms. Tanjila Broti -->
+      <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="300">
+        <div class="count-box teacher-box">
+          <i class="bi bi-person-badge"></i>
+          <span>Ms. Tanjila Broti</span>
+          <p>
+            <strong>Lecturer Grade-I, CSE, AUST</strong><br>
+            Phone: +8801747053002<br>
+            Email: broti.cse@aust.edu
+          </p>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section><!-- End References Section -->
+
+<style>
+.teacher-box {
+  padding: 30px;
+  min-height: 300px;
+}
+.teacher-box span {
+  font-size: 1.4rem;
+  font-weight: 600;
+  margin-bottom: 15px;
+  display: block;
+}
+.teacher-box p {
+  margin-bottom: 0;
+  line-height: 1.8;
+}
+.bi-person-badge {
+  font-size: 2rem;
+  color: #2487ce;
+  margin-bottom: 15px;
+}
+</style>
     <!-- ======= Skills Section ======= -->
     <section id="skills" class="skills section-bg">
       <div class="container">
