--- a/index.html
+++ b/index.html
@@ -137,21 +137,21 @@
           <span>Dr. Taslim Taher</span>
           <p>
             <strong>Assistant Professor, CSE, AUST</strong><br>
-            Phone: +880166620796<br>
-            Email: taslim.cse@aust.edu
+            Phone:+880166620796<br>
+            Email:taslim.cse@aust.edu
           </p>
         </div>
       </div>
 
-      <!-- Dr. Md. Shahriar Mahbub -->
+      <!-- Dr.Md. Shahriar Mahbub -->
       <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
         <div class="count-box teacher-box">
           <i class="bi bi-person-badge"></i>
           <span>Dr. Md. Shahriar Mahbub</span>
           <p>
             <strong>Professor, CSE, AUST</strong><br>
-            Phone: +8801748567161<br>
-            Email: shahriar.cse@aust.edu
+            Phone:+8801748567161<br>
+            Email:shahriar.cse@aust.edu
           </p>
         </div>
       </div>
@@ -160,11 +160,11 @@
       <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
         <div class="count-box teacher-box">
           <i class="bi bi-person-badge"></i>
-          <span>Mr. Md. Reasad Zaman Chowdhury</span>
+          <span>Reasad Zaman Chowdhury</span>
           <p>
             <strong>Lecturer Grade-I, CSE, AUST</strong><br>
-            Phone: +8801744944524<br>
-            Email: reasad.cse@aust.edu
+            Phone:+8801744944524<br>
+            Email:reasad.cse@aust.edu
           </p>
         </div>
       </div>
@@ -173,11 +173,11 @@
       <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="300">
         <div class="count-box teacher-box">
           <i class="bi bi-person-badge"></i>
-          <span>Ms. Tanjila Broti</span>
+          <span>Ms.Tanjila Broti</span>
           <p>
             <strong>Lecturer Grade-I, CSE, AUST</strong><br>
-            Phone: +8801747053002<br>
-            Email: broti.cse@aust.edu
+            Phone:+8801747053002<br>
+            Email:broti.cse@aust.edu
           </p>
         </div>
       </div>
