--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
 
     <div class="row no-gutters">
 
-      <!-- Dr. Taslim Taher -->
+      <!--Dr.Taslim Taher-->
       <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
         <div class="count-box teacher-box">
           <i class="bi bi-person-badge"></i>
-          <span>Dr. Taslim Taher</span>
+          <span>Dr.Taslim Taher</span>
           <p>
             <strong>Assistant Professor, CSE, AUST</strong><br>
             Phone:+880166620796<br>
@@ -143,11 +143,11 @@
         </div>
       </div>
 
-      <!-- Dr.Md. Shahriar Mahbub -->
+      <!--Dr.Md.Shahriar Mahbub -->
       <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
         <div class="count-box teacher-box">
           <i class="bi bi-person-badge"></i>
-          <span>Dr. Md. Shahriar Mahbub</span>
+          <span>Dr.Md.Shahriar Mahbub</span>
           <p>
             <strong>Professor, CSE, AUST</strong><br>
             Phone:+8801748567161<br>
@@ -156,7 +156,7 @@
         </div>
       </div>
 
-      <!-- Mr. Md. Reasad Zaman Chowdhury -->
+      <!--Reasad Zaman Chowdhury -->
       <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
         <div class="count-box teacher-box">
           <i class="bi bi-person-badge"></i>
@@ -169,7 +169,7 @@
         </div>
       </div>
 
-      <!-- Ms. Tanjila Broti -->
+      <!--Tanjila Broti -->
       <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="300">
         <div class="count-box teacher-box">
           <i class="bi bi-person-badge"></i>
