--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
       <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
         <div class="count-box teacher-box">
           <i class="bi bi-person-badge"></i>
-          <span>Reasad Zaman Chowdhury</span>
+          <span>Mr. Reasad Zaman</span>
           <p>
             <strong>Lecturer Grade-I,CSE,AUST</strong><br>
             Phone:+8801744944524<br>
